# founder-os

./: .gitattributes  .gitignore  PROGRESS.md  README.md  biome.json  git-init-push.bat  memory.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.seed.json  turbo.json
.claude/: settings.json
.github/workflows/: typecheck.yml
apps/builder-extension/: .vscodeignore  CHANGELOG.md  PACKAGING.md  README.md  esbuild.mjs  founder-os-builder-0.1.0.vsix  package.json
apps/builder-extension/src/: extension.ts
apps/builder-extension/src/runners/: build-runner.ts
apps/founder-cowork/: .vscodeignore  CHANGELOG.md  PACKAGING.md  esbuild.mjs  founder-cowork-0.2.0.vsix  founder-cowork-0.2.1.vsix  package.json  tsconfig.json
apps/founder-cowork/src/: extension.ts
apps/founder-cowork/src/lib/: git.ts  markdown-store.ts  memory.ts  ollama.ts  pty-loader.ts  session-terminal.ts  skills.ts  task-flow.ts  vault.ts
apps/founder-cowork/src/runners/: all-runners.ts  build-runner.ts  handoff-sdk-runner.ts  system-prompts.ts
apps/founder-cowork/src/views/: mission-control.ts  session-tree.ts  status-tree.ts
apps/founder-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/founder-desktop/src/: main.tsx  types.d.ts
apps/founder-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/founder-desktop/src-tauri/capabilities/: default.json
apps/founder-desktop/src-tauri/migrations/: 0002-llm-settings.sql  0003-venture-provider.sql  0004-audit-fix-suggestions.sql  0005-llm-settings-mode.sql  0006-chat-provider-column.sql  0007-prompt-master-cache.sql  0008-prompt-master-events.sql  0009-prompt-master-event-venture.sql  0010-prompt-master-event-model.sql  0011-brand-name-candidates.sql  0012-vault.sql  0013-vault-drafts.sql  0014-vault-drafts-template-version.sql
apps/founder-desktop/src-tauri/src/: backend.rs  brand_checks.rs  brand_names.rs  brand_pack.rs  cache.rs  cli_agent.rs  codesign.rs  crm.rs  db_smoke.rs  editor.rs  handoff_pack.rs  handoff_watcher.rs  lib.rs  llm.rs  main.rs  media.rs  media_edit.rs  pdf.rs  pricing.rs  sales_report.rs  secrets.rs  social.rs  vault.rs  vault_extract.rs  vault_fs.rs
apps/founder-desktop/src/app/: App.tsx  WelcomeScreen.tsx
apps/founder-desktop/src/features/chrome/: ThemeToggle.tsx
apps/founder-desktop/src/features/toasts/: ToastContainer.tsx
apps/founder-desktop/src/features/vault/: DreamVaultBrowser.tsx  HomeVaultButtons.tsx  VaultImportFlow.tsx  VaultPendingImportsPanel.tsx  boot-hydration.ts  drive-client.ts  normalize-dialog-path.ts  promote-to-venture.ts  run-vault-import.ts  tauri-fs-port.ts  types.ts
apps/founder-desktop/src/features/ventures/: AdvanceConfirmModal.tsx  ArtifactsTab.tsx  AuditTab.tsx  BackendTab.tsx  BrandChatPanel.tsx  BrandTab.tsx  CodesignPreviewModal.tsx  CrmTab.tsx  DeepResearchPanel.tsx  FailedRunBanner.tsx  (+28 more)
apps/founder-desktop/src/lib/: ProviderModeBadge.tsx  advance-gate.ts  artifacts-scan.ts  backend-supabase.ts  brand-distiller.ts  brand-gen.ts  brand-names.ts  chat-attachments.ts  cli-client.ts  codesign-launcher.ts  db.ts  distill-engine.ts  distill-source.ts  failed-runs.ts  llm-client.ts  palette-presets.ts  pipeline-fs.ts  pipeline-image-gen.ts  pipeline-llm.ts  prompt-master-config.ts  prompt-master-init.ts  prompt-master-stream-transport.ts  prompt-master-tauri-cache.ts  prompt-master-tauri-telemetry.ts  research-distiller.ts  review-gates.ts  run-all-stages.ts  run-audit-stage.ts  run-backend-stage.ts  run-brand-stage.ts  run-build-stage.ts  run-crm-stage.ts  run-finance-stage.ts  run-handoff-pack-stage.ts  run-launch-stage.ts  run-media-edit-stage.ts  run-media-stage.ts  run-product-stage.ts  run-research-stage.ts  run-social-post.ts  (+14 more)
apps/founder-desktop/src/styles/: dreamlauncher.css  themes.css
bizBuild/: DREAM-VAULT-RUST-IPC-SHIP-NOTES-ADDENDUM-2.md  DREAM-VAULT-RUST-IPC-SHIP-NOTES-ADDENDUM-3.md  DREAM-VAULT-RUST-IPC-SHIP-NOTES-ADDENDUM.md  DREAM-VAULT-RUST-IPC-SHIP-NOTES.md  DREAM-VAULT-SHIP-NOTES.md  PIPELINE-HARDENING-SHIP-NOTES.md
scripts/: gen-packages.py  gen-packages.sh  optimize-prompts.mjs  seed.ts
services/: .env.example  .gitignore  README.md  docker-compose.yml
services/research-py/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/research-py/src/research_py/: __init__.py  competitors.py  config.py  icp.py  jobs.py  main.py
services/research-py/src/research_py/clients/: __init__.py  firecrawl.py  searxng.py
services/research-py/src/research_py/prompt_master/: __init__.py  cache.py  client.py  core.py  fallback.py  hash.py  telemetry.py
services/research-py/src/research_py/prompt_master/transports/: anthropic_skill.py
services/research-py/src/research_py/routes/: health.py  research.py  scrape.py  search.py
services/scripts/: biome-cleanup.ps1  down.ps1  health-check.ps1  smoke-competitors.ps1  smoke-deep.ps1  smoke-icp.ps1  up.ps1
services/searxng/: limiter.toml  settings.yml
ventures/smoke-deep/01_research/market-gaps/: research-summary.md  sources.json
ventures/smoke-test/02_validation/icp/: icp.md  icp.yaml
ventures/smoke-test/02_validation/pricing/: competitors-pricing.csv
(+25 files in other folders)
